fix: increase bottom-sheet z-index to be popover level

--- a/less/modules/bottom-sheet.less
+++ b/less/modules/bottom-sheet.less
@@ -18,7 +18,7 @@
 			-webkit-overflow-scrolling: touch;
 			transform: translate3d(0, 350px, 0);
 			transition: transform 0.3s, visibility 0s 0.3s;
-			z-index: 995;
+			z-index: @zindex-popover;
 			padding: 5px 0 10px;
 
 			border-bottom-left-radius: 0;
